tests/NormalTests/paczka1/small_fuzzy/34110050.err
Error in line 1: dx0LBt9tZ A896 61,31
Error in line 12: 4iAKNS9F2f S192 -1,6
Error in line 14: NTSEttL S708 5,0
